@@ -1,3 +1,7 @@
+2015-11-03  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Resolves #71263: Fatal error in tx_rtehtmlarea_acronym with PHP 5.3
+
 2015-11-02  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #71108: some broken icon paths
